# mcp-hack

./: Cargo.toml  README.md
src/: main.rs
src/cmd/: exec.rs  format.rs  fuzz.rs  get.rs  list.rs  mod.rs  shared.rs  subject.rs
src/mcp/: mod.rs
src/utils/: mod.rs
