[package]
name = "mcp-hack"
version = "0.1.0"
edition = "2024"
authors = ["hahwul"]
description = "MCP Hack - A tool for MCP security testing"
repository = "https://github.com/hahwul/mcp-hack"
license = "MIT"
keywords = ["mcp", "security", "penetration-testing", "hacking", "cli"]
categories = ["command-line-utilities", "mcp"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rmcp = { version = "0.6.4", features = ["client", "server", "transport-child-process"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "process"] }
url = "2.5"
shell-words = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "mcp-hack"
path = "src/main.rs"
